compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__prelude__equality_uses_prelude.snap
---
source: compiler-core/src/luau/tests/prelude.rs
expression: "\npub fn main() {\n  [1] == [1]\n}\n"
---
----- SOURCE CODE

pub fn main() {
  [1] == [1]
}


----- COMPILED LUAU
local _gleam = require("../../prelude")

local function main()
  return _gleam.isEqual(_gleam.toList({1}), _gleam.toList({1}))
end

return {
  main = main
}
