compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__prelude__list_uses_prelude.snap
---
source: compiler-core/src/luau/tests/prelude.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n}\n"
---
----- SOURCE CODE

pub fn main() {
  [1, 2, 3]
}


----- COMPILED LUAU
local _gleam = require("../gleam")

local function main()
  return _gleam.toList({1, 2, 3})
end

return {
  main = main
}
